# kinesis-webrtc-superbuild

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Dockerfile  Dockerfile.filc  README.md  SANITIZERS.md  all-test-android-app.sh  emulator.sh  restart-emulator.sh  run-tests-on-device.sh  test-android-app.sh  test-android.sh  test-docker.sh  test-mac.sh  test-no-signaling.sh
.github/workflows/: ci.yml
android-test-app/: local.properties
android-test-app/app/: build.gradle
android-test-app/app/src/androidTest/java/com/kvs/webrtctest/: WebRtcNativeTest.java
browser-test/: dc-test.html  dc-test.js  dcTestServer.cpp  package-lock.json  package.json  runner.mjs
scripts/: test-browser.sh
